--- a/.github.yml
+++ b/.github.yml
@@ -1,9 +1,12 @@
 name: Java CI
 
 on:
+  push:
+    branches:
+      -main
   pull_request:
     branches:
-      - master
+      -main
 
 jobs:
   tests:
@@ -24,7 +27,7 @@ jobs:
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
 
       - name: Run test
-        run: ./gradlew test
+        run: ./gradlew test jacocoTestReport
 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
